# brazil-education-pipeline

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: ingest_censo.yml  ingest_enem.yml  ingest_ideb.yml
ingestion/: censo_escolar.py  enem.py  ideb.py  requirements.txt  uploader.py
queries_dash/: 01_renda_vs_nota.sql  02_gap_racial.sql  03_gap_genero_disciplina.sql  04_desigualdade_regional.sql  05_publico_vs_privado.sql  06_evolucao_ideb.sql  07_infra_vs_desempenho.sql  08_aluno_improvavel.sql  09_vulnerabilidade_municipal.sql  10_perfil_clusters.sql  11_feature_importance.sql
resources/: education_pipeline.job.yml
src/brazil_education_pipeline/: __init__.py  config.py
src/notebooks/: 00_setup.py
src/notebooks/bronze/: 01_enem.py  02_censo_escolar.py  03_ideb.py
src/notebooks/exploratory/: dashboard_queries.py
src/notebooks/gold/: 06_analytics.py
src/notebooks/ml/: 07_feature_engineering.py  08_training.py  08b_clustering.py  09_inference.py
src/notebooks/silver/: 04_enem.py  05_censo_ideb.py
